--- a/package.json
+++ b/package.json
@@ -15,43 +15,43 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-vercel": "^3.0.3",
-		"@sveltejs/kit": "^1.24.1",
-		"@tailwindcss/typography": "^0.5.10",
-		"@types/node": "^20.5.9",
-		"@typescript-eslint/eslint-plugin": "^6.6.0",
-		"@typescript-eslint/parser": "^6.6.0",
-		"autoprefixer": "^10.4.14",
-		"eslint": "^8.48.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-svelte": "^2.33.0",
-		"mdsvex": "^0.11.0",
-		"postcss": "^8.4.29",
-		"postcss-load-config": "^4.0.1",
-		"prettier": "^3.0.3",
-		"prettier-plugin-svelte": "^3.0.3",
-		"prettier-plugin-tailwindcss": "^0.5.4",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.5.1",
-		"tailwindcss": "^3.3.3",
-		"tslib": "^2.6.2",
-		"typescript": "^5.2.2",
-		"vite": "^4.4.2",
-		"vitest": "^0.34.3"
+		"@playwright/test": "^1.53.1",
+		"@sveltejs/adapter-vercel": "^3.1.0",
+		"@sveltejs/kit": "^1.30.4",
+		"@tailwindcss/typography": "^0.5.16",
+		"@types/node": "^20.19.1",
+		"@typescript-eslint/eslint-plugin": "^6.21.0",
+		"@typescript-eslint/parser": "^6.21.0",
+		"autoprefixer": "^10.4.21",
+		"eslint": "^8.57.1",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.46.1",
+		"mdsvex": "^0.11.2",
+		"postcss": "^8.5.6",
+		"postcss-load-config": "^4.0.2",
+		"prettier": "^3.6.0",
+		"prettier-plugin-svelte": "^3.4.0",
+		"prettier-plugin-tailwindcss": "^0.5.14",
+		"svelte": "^4.2.20",
+		"svelte-check": "^3.8.6",
+		"tailwindcss": "^3.4.17",
+		"tslib": "^2.8.1",
+		"typescript": "^5.8.3",
+		"vite": "^4.5.14",
+		"vitest": "^0.34.6"
 	},
 	"type": "module",
 	"dependencies": {
-		"@vercel/analytics": "^1.0.2",
-		"clsx": "^2.0.0",
-		"fathom-client": "^3.5.0",
-		"lucide-svelte": "0.275.0-beta.0",
+		"@vercel/analytics": "^1.5.0",
+		"clsx": "^2.1.1",
+		"fathom-client": "^3.7.2",
+		"lucide-svelte": "^0.522.0",
 		"mdsvex-relative-images": "^1.0.3",
 		"rehype-slug": "^6.0.0",
 		"remark-toc": "^8.0.1",
 		"remark-unwrap-images": "^3.0.1",
-		"shiki": "^0.14.4",
+		"shiki": "^0.14.7",
 		"tailwind-merge": "^1.14.0",
-		"zod": "^3.22.2"
+		"zod": "^3.25.67"
 	}
 }
