--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
 	"name": "codingtemple-svelte",
 	"version": "0.0.1",
 	"private": true,
+	"packageManager": "pnpm@10.12.2",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "export NODE_OPTIONS='--max-old-space-size=4096' && vite build",
 		"preview": "vite preview",
-		"test": "npm run test:integration && npm run test:unit",
+		"test": "pnpm run test:integration && pnpm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
@@ -18,6 +19,7 @@
 		"@playwright/test": "^1.53.1",
 		"@sveltejs/adapter-vercel": "^3.1.0",
 		"@sveltejs/kit": "^1.30.4",
+		"@tailwindcss/postcss": "^4.1.10",
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/node": "^20.19.1",
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -31,13 +33,13 @@
 		"postcss-load-config": "^4.0.2",
 		"prettier": "^3.6.0",
 		"prettier-plugin-svelte": "^3.4.0",
-		"prettier-plugin-tailwindcss": "^0.5.14",
+		"prettier-plugin-tailwindcss": "^0.6.13",
 		"svelte": "^4.2.20",
 		"svelte-check": "^3.8.6",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.1.10",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.3",
-		"vite": "^4.5.14",
+		"vite": "^5.4.17",
 		"vitest": "^0.34.6"
 	},
 	"type": "module",
