--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.53.1",
-		"@sveltejs/adapter-vercel": "^3.1.0",
-		"@sveltejs/kit": "^1.30.4",
+		"@sveltejs/adapter-vercel": "^4.0.5",
+		"@sveltejs/kit": "^2.22.0",
+		"@sveltejs/vite-plugin-svelte": "^3.1.2",
 		"@tailwindcss/postcss": "^4.1.10",
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/node": "^20.19.1",
@@ -40,7 +41,7 @@
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.3",
 		"vite": "^5.4.17",
-		"vitest": "^0.34.6"
+		"vitest": "^1.0.0"
 	},
 	"type": "module",
 	"dependencies": {
