--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.29.0",
 		"@playwright/test": "^1.53.1",
 		"@sveltejs/adapter-vercel": "^4.0.5",
 		"@sveltejs/kit": "^2.22.0",
@@ -23,12 +24,13 @@
 		"@tailwindcss/postcss": "^4.1.10",
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/node": "^20.19.1",
-		"@typescript-eslint/eslint-plugin": "^6.21.0",
-		"@typescript-eslint/parser": "^6.21.0",
+		"@typescript-eslint/eslint-plugin": "^8.34.1",
+		"@typescript-eslint/parser": "^8.34.1",
 		"autoprefixer": "^10.4.21",
-		"eslint": "^8.57.1",
+		"eslint": "^9.29.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.46.1",
+		"eslint-plugin-svelte": "^3.9.3",
+		"globals": "^16.2.0",
 		"mdsvex": "^0.11.2",
 		"postcss": "^8.5.6",
 		"postcss-load-config": "^4.0.2",
