--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.13",
 		"svelte": "^5.34.7",
-		"svelte-check": "^4.1.6",
+		"svelte-check": "^4.2.2",
+		"svelte-eslint-parser": "^1.2.0",
 		"tailwindcss": "^4.1.10",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.3",
