--- a/package.json
+++ b/package.json
@@ -18,22 +18,22 @@
 	"devDependencies": {
 		"@eslint/js": "^9.29.0",
 		"@playwright/test": "^1.53.1",
-		"@sveltejs/adapter-vercel": "^4.0.5",
+		"@sveltejs/adapter-vercel": "^5.7.2",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^5.1.0",
 		"@tailwindcss/postcss": "^4.1.10",
 		"@tailwindcss/typography": "^0.5.16",
-		"@types/node": "^22.10.5",
-		"@typescript-eslint/eslint-plugin": "^8.34.1",
-		"@typescript-eslint/parser": "^8.34.1",
+		"@types/node": "^22.15.32",
+		"@typescript-eslint/eslint-plugin": "^8.35.0",
+		"@typescript-eslint/parser": "^8.35.0",
 		"autoprefixer": "^10.4.21",
 		"eslint": "^9.29.0",
-		"eslint-config-prettier": "^9.1.0",
+		"eslint-config-prettier": "^10.1.5",
 		"eslint-plugin-svelte": "^3.9.3",
 		"globals": "^16.2.0",
-		"mdsvex": "^0.11.2",
+		"mdsvex": "^0.12.6",
 		"postcss": "^8.5.6",
-		"postcss-load-config": "^4.0.2",
+		"postcss-load-config": "^6.0.1",
 		"prettier": "^3.6.0",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.13",
@@ -50,14 +50,13 @@
 	"dependencies": {
 		"@vercel/analytics": "^1.5.0",
 		"clsx": "^2.1.1",
-		"fathom-client": "^3.7.2",
 		"lucide-svelte": "^0.522.0",
-		"mdsvex-relative-images": "^1.0.3",
+		"mdsvex-relative-images": "^2.0.0",
 		"rehype-slug": "^6.0.0",
-		"remark-toc": "^8.0.1",
-		"remark-unwrap-images": "^3.0.1",
-		"shiki": "^0.14.7",
-		"tailwind-merge": "^1.14.0",
+		"rehype-unwrap-images": "^1.0.0",
+		"remark-toc": "^9.0.0",
+		"shiki": "^3.7.0",
+		"tailwind-merge": "^3.3.1",
 		"zod": "^3.25.67"
 	}
 }
