--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
 		"vite": "^7.0.6"
 	},
 	"type": "module",
+	"engines": {
+		"node": ">=22.0.0"
+	},
 	"dependencies": {
 		"@vercel/analytics": "^1.5.0",
 		"clsx": "^2.1.1",
