--- a/.prettierrc
+++ b/.prettierrc
@@ -10,6 +10,13 @@
 			"options": {
 				"parser": "svelte"
 			}
+		},
+		{
+			"files": "*.md",
+			"options": {
+				"useTabs": false,
+				"tabWidth": 2
+			}
 		}
 	],
 	"tailwindStylesheet": "./src/app.css"
