--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"test:coverage": "vitest --coverage",
 		"test:run": "vitest run",
 		"test:integration": "vitest run --config vitest.config.integration.ts",
-		"validate": "pnpm lint && pnpm check && pnpm test:run && pnpm build"
+		"validate:posts": "node scripts/validate-posts.js",
+		"validate": "pnpm lint && pnpm check && pnpm validate:posts && pnpm test:run && pnpm build"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.32.0",
@@ -40,7 +41,9 @@
 		"eslint": "^9.32.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.11.0",
+		"glob": "^11.0.3",
 		"globals": "^16.3.0",
+		"gray-matter": "^4.0.3",
 		"happy-dom": "^15.11.7",
 		"mdsvex": "^0.12.6",
 		"msw": "^2.7.0",
