--- a/static/manifest.json
+++ b/static/manifest.json
@@ -11,7 +11,20 @@
 		{
 			"src": "/favicon.png",
 			"sizes": "32x32",
-			"type": "image/png"
+			"type": "image/png",
+			"purpose": "any maskable"
+		},
+		{
+			"src": "/favicon-32x32.png",
+			"sizes": "32x32",
+			"type": "image/png",
+			"purpose": "any maskable"
+		},
+		{
+			"src": "/favicon-192x192.png",
+			"sizes": "192x192",
+			"type": "image/png",
+			"purpose": "any maskable"
 		}
 	]
 }
