--- a/package.json
+++ b/package.json
@@ -21,49 +21,49 @@
 		"validate": "pnpm lint && pnpm check && pnpm validate:posts && pnpm test:run && pnpm build"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.32.0",
-		"@sveltejs/adapter-node": "^5.2.10",
-		"@sveltejs/adapter-vercel": "^5.9.0",
-		"@sveltejs/kit": "^2.31.0",
-		"@sveltejs/vite-plugin-svelte": "^6.1.0",
-		"@tailwindcss/postcss": "^4.1.11",
-		"@tailwindcss/typography": "^0.5.15",
-		"@tailwindcss/vite": "^4.0.0",
-		"@testing-library/jest-dom": "^6.6.3",
+		"@eslint/js": "^9.39.1",
+		"@sveltejs/adapter-node": "^5.4.0",
+		"@sveltejs/adapter-vercel": "^5.10.3",
+		"@sveltejs/kit": "^2.48.4",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@tailwindcss/postcss": "^4.1.17",
+		"@tailwindcss/typography": "^0.5.19",
+		"@tailwindcss/vite": "^4.1.17",
+		"@testing-library/jest-dom": "^6.9.1",
 		"@testing-library/svelte": "^5.2.8",
-		"@testing-library/user-event": "^14.6.0",
-		"@types/node": "^24.2.0",
-		"@typescript-eslint/eslint-plugin": "^8.38.0",
-		"@typescript-eslint/parser": "^8.38.0",
+		"@testing-library/user-event": "^14.6.1",
+		"@types/node": "^24.10.0",
+		"@typescript-eslint/eslint-plugin": "^8.46.3",
+		"@typescript-eslint/parser": "^8.46.3",
 		"@vitest/coverage-v8": "^3.2.4",
 		"@vitest/ui": "^3.2.4",
 		"autoprefixer": "^10.4.21",
-		"eslint": "^9.32.0",
+		"eslint": "^9.39.1",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-svelte": "^3.11.0",
+		"eslint-plugin-svelte": "^3.13.0",
 		"glob": "^11.0.3",
-		"globals": "^16.3.0",
+		"globals": "^16.5.0",
 		"gray-matter": "^4.0.3",
 		"happy-dom": "^15.11.7",
 		"mdsvex": "^0.12.6",
-		"msw": "^2.7.0",
+		"msw": "^2.12.1",
 		"postcss": "^8.5.6",
 		"postcss-load-config": "^6.0.1",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
-		"prettier-plugin-tailwindcss": "^0.6.11",
-		"svelte": "^5.37.3",
-		"svelte-check": "^4.3.1",
-		"svelte-eslint-parser": "^1.3.1",
-		"tailwindcss": "^4.0.0",
+		"prettier-plugin-tailwindcss": "^0.6.14",
+		"svelte": "^5.43.5",
+		"svelte-check": "^4.3.3",
+		"svelte-eslint-parser": "^1.4.0",
+		"tailwindcss": "^4.1.17",
 		"tslib": "^2.8.1",
-		"typescript": "^5.9.2",
-		"vite": "^7.0.6",
+		"typescript": "^5.9.3",
+		"vite": "^7.2.2",
 		"vitest": "^3.2.4"
 	},
 	"type": "module",
 	"engines": {
-		"node": ">=22.0.0"
+		"node": ">=22.0.0 <23.0.0"
 	},
 	"dependencies": {
 		"@vercel/analytics": "^1.5.0",
@@ -74,9 +74,9 @@
 		"rehype-slug": "^6.0.0",
 		"rehype-unwrap-images": "^1.0.0",
 		"remark-toc": "^9.0.0",
-		"shiki": "^3.9.2",
-		"tailwind-merge": "^3.3.1",
-		"zod": "^4.0.14"
+		"shiki": "^3.15.0",
+		"tailwind-merge": "^3.4.0",
+		"zod": "^4.1.12"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
