--- a/static/manifest.json
+++ b/static/manifest.json
@@ -4,27 +4,19 @@
 	"description": "Building meaningful stuff while juggling work, family, and life. 25+ years in tech, learning in public.",
 	"start_url": "/",
 	"display": "standalone",
-	"background_color": "#0a0a0f",
-	"theme_color": "#0a0a0f",
+	"background_color": "#002642",
+	"theme_color": "#002642",
 	"orientation": "portrait-primary",
 	"icons": [
 		{
-			"src": "/favicon.png",
-			"sizes": "32x32",
-			"type": "image/png",
-			"purpose": "any maskable"
-		},
-		{
-			"src": "/favicon-32x32.png",
-			"sizes": "32x32",
-			"type": "image/png",
-			"purpose": "any maskable"
-		},
-		{
 			"src": "/favicon-192x192.png",
 			"sizes": "192x192",
-			"type": "image/png",
-			"purpose": "any maskable"
+			"type": "image/png"
+		},
+		{
+			"src": "/favicon-512x512.png",
+			"sizes": "512x512",
+			"type": "image/png"
 		}
 	]
 }
