--- a/package.json
+++ b/package.json
@@ -12,13 +12,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "svelte-kit sync && prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"test": "vitest",
-		"test:ui": "vitest --ui",
-		"test:coverage": "vitest --coverage",
-		"test:run": "vitest run",
-		"test:integration": "vitest run --config vitest.config.integration.ts",
 		"validate:posts": "node scripts/validate-posts.js",
-		"validate": "pnpm lint && pnpm check && pnpm validate:posts && pnpm test:run && pnpm build"
+		"validate": "pnpm lint && pnpm check && pnpm validate:posts && pnpm build"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.39.2",
@@ -29,14 +24,9 @@
 		"@tailwindcss/postcss": "^4.1.18",
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.18",
-		"@testing-library/jest-dom": "^6.9.1",
-		"@testing-library/svelte": "^5.3.1",
-		"@testing-library/user-event": "^14.6.1",
 		"@types/node": "^24.10.9",
 		"@typescript-eslint/eslint-plugin": "^8.54.0",
 		"@typescript-eslint/parser": "^8.54.0",
-		"@vitest/coverage-v8": "^3.2.4",
-		"@vitest/ui": "^3.2.4",
 		"autoprefixer": "^10.4.23",
 		"eslint": "^9.39.2",
 		"eslint-config-prettier": "^10.1.8",
@@ -44,9 +34,7 @@
 		"glob": "^11.1.0",
 		"globals": "^16.5.0",
 		"gray-matter": "^4.0.3",
-		"happy-dom": "^15.11.7",
 		"mdsvex": "^0.12.6",
-		"msw": "^2.12.7",
 		"postcss": "^8.5.6",
 		"postcss-load-config": "^6.0.1",
 		"prettier": "^3.8.1",
@@ -58,8 +46,7 @@
 		"tailwindcss": "^4.1.18",
 		"tslib": "^2.8.1",
 		"typescript": "^5.9.3",
-		"vite": "^7.3.1",
-		"vitest": "^3.2.4"
+		"vite": "^7.3.1"
 	},
 	"type": "module",
 	"engines": {
