Migrate newsletter to Loops SDK

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-# MailerLite (Email Marketing)
-MAILER_LITE_TOKEN=the token
-MAILER_LITE_GROUP_ID=the group id
+# Loops (Email Marketing)
+LOOPS_API_KEY=your-loops-api-key
