--- a/.prettierrc
+++ b/.prettierrc
@@ -2,8 +2,7 @@
 	"useTabs": true,
 	"trailingComma": "none",
 	"printWidth": 100,
-	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
-	"tailwindConfig": "./tailwind.config.ts",
+	"plugins": ["prettier-plugin-svelte"],
 	"overrides": [
 		{
 			"files": "*.svelte",
@@ -18,6 +17,5 @@
 				"tabWidth": 2
 			}
 		}
-	],
-	"tailwindStylesheet": "./src/app.css"
+	]
 }
