--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "thitemple.me",
 	"version": "2.0.0",
 	"private": true,
-	"packageManager": "pnpm@10.28.2",
+	"packageManager": "bun@1.3.6",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "export NODE_OPTIONS='--max-old-space-size=4096' && vite build",
@@ -12,8 +12,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "svelte-kit sync && prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"validate:posts": "node scripts/validate-posts.js",
-		"validate": "pnpm lint && pnpm check && pnpm validate:posts && pnpm build"
+		"validate:posts": "bun scripts/validate-posts.js",
+		"validate": "bun run lint && bun run check && bun run validate:posts && bun run build"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.39.2",
@@ -21,13 +21,11 @@
 		"@sveltejs/adapter-vercel": "^5.10.3",
 		"@sveltejs/kit": "^2.52.0",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
-		"@tailwindcss/postcss": "^4.1.18",
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.18",
 		"@types/node": "^24.10.13",
 		"@typescript-eslint/eslint-plugin": "^8.55.0",
 		"@typescript-eslint/parser": "^8.55.0",
-		"autoprefixer": "^10.4.24",
 		"eslint": "^9.39.2",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.15.0",
@@ -35,17 +33,15 @@
 		"globals": "^16.5.0",
 		"gray-matter": "^4.0.3",
 		"mdsvex": "^0.12.6",
-		"postcss": "^8.5.6",
-		"postcss-load-config": "^6.0.1",
 		"prettier": "^3.8.1",
 		"prettier-plugin-svelte": "^3.4.1",
-		"prettier-plugin-tailwindcss": "^0.6.14",
 		"svelte": "^5.51.2",
 		"svelte-check": "^4.4.0",
 		"svelte-eslint-parser": "^1.4.1",
 		"tailwindcss": "^4.1.18",
 		"tslib": "^2.8.1",
 		"typescript": "^5.9.3",
+		"vitest": "^3.2.4",
 		"vite": "^7.3.1"
 	},
 	"type": "module",
@@ -66,9 +62,7 @@
 		"tailwind-merge": "^3.4.1",
 		"zod": "^4.3.6"
 	},
-	"pnpm": {
-		"onlyBuiltDependencies": [
-			"esbuild"
-		]
-	}
+	"trustedDependencies": [
+		"esbuild"
+	]
 }
