--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
 	"packageManager": "bun@1.3.6",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "export NODE_OPTIONS='--max-old-space-size=4096' && vite build",
+		"dev:search": "bun run build && vite dev",
+		"build": "export NODE_OPTIONS='--max-old-space-size=4096' && vite build && bun run search:index",
 		"preview": "vite preview",
+		"search:index": "bun scripts/build-pagefind-index.mjs",
 		"sync": "svelte-kit sync",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -33,6 +35,7 @@
 		"globals": "^16.5.0",
 		"gray-matter": "^4.0.3",
 		"mdsvex": "^0.12.6",
+		"pagefind": "^1.4.0",
 		"prettier": "^3.8.1",
 		"prettier-plugin-svelte": "^3.4.1",
 		"svelte": "^5.51.2",
@@ -41,8 +44,8 @@
 		"tailwindcss": "^4.1.18",
 		"tslib": "^2.8.1",
 		"typescript": "^5.9.3",
-		"vitest": "^3.2.4",
-		"vite": "^7.3.1"
+		"vite": "^7.3.1",
+		"vitest": "^3.2.4"
 	},
 	"type": "module",
 	"engines": {
